Lesson 19 Route, BrowserRouter, маршрутизация: 1. Загрузил библиотеку Router-react - npm i react-router-dom -save 2. Импортировал BrowserRoute, Routes, Route - import {BrowserRoute, Routes, Route} from 'react-router-dom' 3.Прописал ссылкам пути - <a href="/profile">...</a> 4.Прописал роутинг в главном файле App.js - <BrowserRouter>   __ ...   __<Routes>   ___<Route path='/profile' element={<Profile />} />   ___...   __</Routes>   </BrowserRoute>
  ____end____

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -6,24 +6,25 @@
     font-weight: bold;
 }
 
-.nav__item a {
+.link {
+    display: block;
     text-decoration: none;
     color: white;
 }
-.nav__item{
+.link {
     padding-left: 20px;
     padding-top: 10px;
     padding-right: 20px;
     padding-bottom: 10px;
     cursor: pointer;
 }
-.nav__item:last-child{
+.link:last-child{
     margin-top: 30px;
 }
-.nav__item:hover {
+.link:hover {
     background-color: rgba(255, 255, 255, 0.2);
 }
 
-.active a{
+.active{
     color: red;
 }
