--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -6,19 +6,18 @@
     font-weight: bold;
 }
 
+
 .link {
     display: block;
     text-decoration: none;
     color: white;
-}
-.link {
     padding-left: 20px;
     padding-top: 10px;
     padding-right: 20px;
     padding-bottom: 10px;
     cursor: pointer;
 }
-.link:last-child{
+.item:last-child{
     margin-top: 30px;
 }
 .link:hover {
@@ -27,4 +26,15 @@
 
 .active{
     color: red;
+    display: block;
+    text-decoration: none;
+    padding-left: 20px;
+    padding-top: 10px;
+    padding-right: 20px;
+    padding-bottom: 10px;
+    cursor: pointer;
+}
+
+.active:hover {
+    background-color: rgba(255, 255, 255, 0.2);
 }
