--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -3,11 +3,11 @@
     padding: 10px;
     font-size: 16px;
     font-weight: normal;
-    border: darkred 2px solid;
-    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    box-shadow: -2px 3px 5px rgba(0,0,0,0.2);
     display: flex;
     flex-direction: column;
     width: 80%;
+    background: white;
 }
 
 .item {
