--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,6 +1,7 @@
 /* Profile */
 .content {
     grid-area: c;
+    background: black;
 }
 
 .content__img {
@@ -8,18 +9,17 @@
     height: 200px;
     object-fit: cover;
 }
-.containe {
-    padding: 20px;
-}
-.containe img {
-    width: 100px;
-    height: 100px;
-}
 
 
 /*About me*/
 .containe__aboutMe {
     display: flex;
+    color: white;
+}
+.containe__aboutMe img {
+    width: 100px;
+    height: 100px;
+    border: red 1px solid;
 }
 .containe__aboutMe h2 {
     margin: 0;
