--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -17,8 +17,11 @@
     padding-bottom: 10px;
     cursor: pointer;
 }
+.item:nth-child(5){
+    margin-top: 20px;
+}
 .item:last-child{
-    margin-top: 30px;
+    margin-top: 40px;
 }
 .link:hover {
     background-color: rgba(255, 255, 255, 0.2);
