--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -19,6 +19,9 @@
     border-left: rgba(0,0,0, 0.5) 2px solid;
     padding: 0 20px;
     overflow: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .message__containe {
