--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -11,10 +11,10 @@
 .users__right {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
 }
 .username {
-    font-size: 25px;
+    font-size: 22px;
     font-weight: bold;
     padding-bottom: 10px;
 }
@@ -24,19 +24,21 @@
 }
 .user__info {
     flex: 50%;
-    border-right: 1px white solid;
 }
 .user__location{
-    flex: 50%;
-    padding-left: 20px;
+    display: flex;
     font-size: 18px;
     line-height: 150%;
+}
+.user__location div {
+    padding-left: 10px;
+    padding-right: 20px;
 }
 
 
 
 .users__avatar {
-    margin-right: 50px;
+    margin-right: 30px;
     object-fit: cover;
     width: 125px;
     height: 125px;
