Lesson 61 cookie, login в теории, auth/me: 1. Cоздал новую ветку в redux-store.js -auth и поключил к ней auth-reducer.js 2. В auth-reducer.js прописал dispatch который устанавливает данные, которые мы получаем с сервера в наш state 3. Создал HeaderContainer.jsx и прописал там классовую компоненту, которая принимает данные с сервера и диспачит в наш state и возвращает Header.jsx 4. Там же прописал connect который передает props из нашего state.

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,9 +3,15 @@
     grid-area: h;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     background: black;
     padding-left: 20px;
     padding-right: 20px;
+}
+
+.logo__block {
+    display: flex;
+    align-items: center;
 }
 
 .logo {
@@ -20,4 +26,22 @@
     font-weight: bold;
     margin-left: 10px;
     color: white;
+}
+
+.login {
+    text-decoration: none;
+    padding: 5px;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    border: red 1px solid;
+    background: rgba(255,0,0,0.2);
+    transition: color 0.2s ease-in-out;
+}
+
+.login:hover {
+    background:rgba(255,0,0,0.4);
+}
+.login:active {
+    background:rgba(255,0,0,0.3);
 }
