--- a/src/components/Dialogs/SendMessage/SendMessage.module.css
+++ b/src/components/Dialogs/SendMessage/SendMessage.module.css
@@ -17,6 +17,6 @@
 .container {
     display: flex;
     flex-direction: column;
-    align-items: end;
+    align-items: flex-end;
     padding-top: 20px;
 }
