--- a/src/App.css
+++ b/src/App.css
@@ -33,4 +33,26 @@
   background: black;
 }
 
+.loading_btn__animation::after{
+  content:"";
+  margin-left: 10px;
+  color:white;
+  height:7px;
+  width:7px;
+  background:transparent;
+  border-radius:50%;
+  border:4px solid red;
+  animation:load 1s infinite;
+}
+@keyframes load{
+  50%{
+    transform:rotatez(180deg);
+    border-style:dashed;
+    border-color:red maroon indianred orangered;
+  }
+  100%{
+    transform:rotatez(360deg);
+  }
+}
+
 
