--- a/src/components/Login/LoginForm.module.css
+++ b/src/components/Login/LoginForm.module.css
@@ -1,3 +1,9 @@
+.header_form {
+    text-align: center;
+    font-size: 50px;
+}
+
+
 .form {
     display: flex;
     flex-direction: column;
@@ -44,5 +50,12 @@
 }
 .container_button {
     display: flex;
+}
+
+.error_server {
+    margin: 20px 10px 5px 10px;
+    padding: 10px;
+    color: red;
+    border: solid 1px red;
 }
 
